--- a/templates/includes/nav_bar.html
+++ b/templates/includes/nav_bar.html
@@ -20,9 +20,10 @@
         {% csrf_token %}
         <div class="form-group">
         </div>
-        <button type="submit" class="btn btn-default">Search</button>
+{#        <button type="submit" class="btn btn-default">Search</button>#}
       </form>
       <ul class="nav navbar-nav navbar-right">
+          <li><a href="{% url 'employees:all' %}">All Employees</a></li>
           <li><a href="{% url 'employees:add' %}">Add Employee</a></li>
         <li class="dropdown">
           <ul class="dropdown-menu">
