--- a/employees/templates/employees/all_employees.html
+++ b/employees/templates/employees/all_employees.html
@@ -9,15 +9,27 @@
         <br>
         {% for emp in object_list %}
             <div class="col-sm-3">
-            <div class="card" style="width:400px">
-              <div class="card-body">
-                <h4 class="card-title">{{ emp.full_name }}</h4>
-                <p class="card-text">{{ emp.first_name }}</p>
+            <div class="thumbnail">
+              <div class="caption">
+                <h4>Full Name : {{ emp.full_name }}</h4>
+{#                <p class="lead">First Name : {{ emp.first_name }}</p>#}
+{#                <p>Middle Name : {{ emp.middle_name }}</p>#}
+{#                <p>Last Name : {{ emp.last_name }}</p>#}
+                <p>Age : {{ emp.age }}</p>
+{#                <p>National Identifier : {{ emp.national_identifier }}</p>#}
+                <p>Gender : {% if emp.gender == 1 %}Male {% else %}Female{% endif %}</p>
+{#                <p>Date Of Birth : {{ emp.date_of_birth }}</p>#}
+{#                <p>Place Of Birth : {{ emp.place_of_birth }}</p>#}
+                <p>Position : {% if emp.position == 1 %} Employee {% elif emp.position == 2 %} Manager {% else %}Ceo{% endif %}</p>
+                <p>Job : {{ emp.job }}</p>
+{#                <p>Country : {{ emp.country }}</p>#}
+{#                <p>Nationality : {{ emp.nationality }}</p>#}
+{#                <p>Marital Status : {% if emp.marital_status == 1 %}Single {% elif emp.marital_status == 2 %}Married{% endif %}</p>#}
+{#                <p>Salary : {{ emp.salary }}</p>#}
                 <a href="{% url 'employees:detail' emp.id %}" class="btn btn-primary">See Profile</a>
               </div>
             </div>
             </div>
-            
         {% endfor %}
     </div>
 {% endblock %}
