update relations, delete relations, see all ralations

--- a/employees/templates/employees/all_employees.html
+++ b/employees/templates/employees/all_employees.html
@@ -34,7 +34,10 @@
                     Delete
                 </button>
                 {% include 'employees/delete_employee_modal.html' %}
+              <br>
+              <br>
               {% if emp.marital_status == 2 %}
+                <a href="{% url 'employees:all-relations' emp.id %}" class="btn btn-primary">See Relations</a>
                 <a href="{% url 'employees:add-relation' emp.id %}" class="btn btn-success">Add Relation</a>
               {% endif %}
               </div>
