--- a/employees/templates/employees/employee_detail.html
+++ b/employees/templates/employees/employee_detail.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% load mathfilters %}
+
 {% block title %}
     {{ title }} | {{ block.super }}
 {% endblock %}
@@ -21,7 +23,10 @@
         <p class="lead">Country : {{ object.country }}</p>
         <p class="lead">Nationality : {{ object.nationality }}</p>
         <p class="lead">Marital Status : {{ object.marital_status }}</p>
-        <p class="lead">Salary : {{ object.salary }}</p>
+        <p class="lead">Main Salary : {{ object.salary }}</p>
+        <p class="lead">Earning : {{ object.earning }}</p>
+        <p class="lead">Deduction : {{ object.deduction }}</p>
+        <p class="lead">Net Salary : {{ object.salary |add:object.earning |sub:object.deduction }}</p>
         <p class="lead">Joined In : {{ object.added }}</p>
         <p class="lead">profile update date : {{ object.updated }}</p>
       </div>
