--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,16 @@
 ul.errorlist > li{
     color: red;
 }
+
+form.form-group p > select{
+    display: block;
+    width: 100%;
+    height: 34px;
+    padding: 6px 12px;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #555;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
