--- a/employees/templates/employees/all_relations.html
+++ b/employees/templates/employees/all_relations.html
@@ -15,15 +15,17 @@
                 <p>Relationship Type : {{ emp.relationship_type }}</p>
                 <p>Age : {{ emp.age }}</p>
                 <p>Date Of Birth : {{ emp.date_of_birth }}</p>
-              </div>
                 <a href="{% url 'employees:update-relation' emp.id %}" class="btn btn-info">Update</a>
                 <!-- Button trigger modal -->
                 <button class="btn btn-danger" href="" data-toggle="modal" data-target="#delete_relation{{ emp.id }}">
                     Delete
                 </button>
                 {% include 'employees/delete_relation_modal.html' %}
+              </div>
             </div>
             </div>
+         {% empty %}
+            <p class="lead text-center">This employee has no relations yet</p>
         {% endfor %}
     </div>
 {% endblock %}
