add fontawesome icons to nav bar

--- a/templates/includes/nav_bar.html
+++ b/templates/includes/nav_bar.html
@@ -23,8 +23,8 @@
 {#        <button type="submit" class="btn btn-default">Search</button>#}
       </form>
       <ul class="nav navbar-nav navbar-right">
-          <li><a href="{% url 'employees:all' %}">All Employees</a></li>
-          <li><a href="{% url 'employees:add' %}">Add Employee</a></li>
+          <li><a href="{% url 'employees:all' %}"><i class="fa fa-users"></i> All Employees</a></li>
+          <li><a href="{% url 'employees:add' %}"><i class="fa fa-user-plus"></i> Add Employee</a></li>
         <li class="dropdown">
           <ul class="dropdown-menu">
           </ul>
