--- a/employees/templates/employees/all_relations.html
+++ b/employees/templates/employees/all_relations.html
@@ -15,10 +15,12 @@
                 <p>Relationship Type : {{ emp.relationship_type }}</p>
                 <p>Age : {{ emp.age }}</p>
                 <p>Date Of Birth : {{ emp.date_of_birth }}</p>
-                <a href="{% url 'employees:update-relation' emp.id %}" class="btn btn-info">Update</a>
+                <a href="{% url 'employees:update-relation' emp.id %}" class="btn btn-info">
+                    <i class="fa fa-edit"></i> Update
+                </a>
                 <!-- Button trigger modal -->
                 <button class="btn btn-danger" href="" data-toggle="modal" data-target="#delete_relation{{ emp.id }}">
-                    Delete
+                    <i class="fa fa-times"></i> Delete
                 </button>
                 {% include 'employees/delete_relation_modal.html' %}
               </div>
