--- a/employees/templates/employees/delete_relation_modal.html
+++ b/employees/templates/employees/delete_relation_modal.html
@@ -9,7 +9,7 @@
         </button>
       </div>
       <div class="modal-body">
-        Are you sure you want to delete employee {{ emp.name }}?
+        Are you sure you want to delete relation {{ emp.name }}?
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
