--- a/templates/includes/js.html
+++ b/templates/includes/js.html
@@ -2,4 +2,5 @@
 
 <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
 <script src="{% static 'js/bootstrap.min.js' %}"></script>
+<script src="{% static 'js/add_full_name.js' %}"></script>
 <script src="{% static 'js/main.js' %}"></script>
