--- a/templates/includes/nav_bar.html
+++ b/templates/includes/nav_bar.html
@@ -16,12 +16,12 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
       </ul>
-      <form method="post" action="." class="navbar-form navbar-left">
-        {% csrf_token %}
-        <div class="form-group">
-        </div>
+{#      <form method="post" action="." class="navbar-form navbar-left">#}
+{#        {% csrf_token %}#}
+{#        <div class="form-group">#}
+{#        </div>#}
 {#        <button type="submit" class="btn btn-default">Search</button>#}
-      </form>
+{#      </form>#}
       <ul class="nav navbar-nav navbar-right">
           <li><a href="{% url 'employees:all' %}"><i class="fa fa-users"></i> All Employees</a></li>
           <li><a href="{% url 'employees:add' %}"><i class="fa fa-user-plus"></i> Add Employee</a></li>
