add material design

--- a/employees/templates/employees/add_new_employee.html
+++ b/employees/templates/employees/add_new_employee.html
@@ -6,7 +6,7 @@
 
 {% block body %}
     <div class="col-sm-offset-3 col-sm-6">
-        <h1 class="text-center"><i class="fa fa-user-plus"></i> Add new employee</h1>
+        <h2 class="text-center"><i class="fa fa-user-plus"></i> Add New Employee</h2>
         <br>
         {% include 'includes/form.html' %}
     </div>
