--- a/templates/includes/nav_bar.html
+++ b/templates/includes/nav_bar.html
@@ -1,5 +1,6 @@
 {% load static %}
-<nav class="navbar navbar-default">
+{#<nav class="navbar navbar-default">#}
+<nav class="navbar primary-color">
   <div class="container-fluid">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -8,27 +9,13 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="{% url 'main_home' %}">
-          Employee
-      </a>
+      <a class="navbar-brand" href="{% url 'main_home' %}">Employee</a>
     </div>
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-      </ul>
-{#      <form method="post" action="." class="navbar-form navbar-left">#}
-{#        {% csrf_token %}#}
-{#        <div class="form-group">#}
-{#        </div>#}
-{#        <button type="submit" class="btn btn-default">Search</button>#}
-{#      </form>#}
       <ul class="nav navbar-nav navbar-right">
-          <li><a href="{% url 'employees:all' %}"><i class="fa fa-users"></i> All Employees</a></li>
-          <li><a href="{% url 'employees:add' %}"><i class="fa fa-user-plus"></i> Add Employee</a></li>
-        <li class="dropdown">
-          <ul class="dropdown-menu">
-          </ul>
-        </li>
+        <li><a href="{% url 'employees:all' %}"><i class="fa fa-users"></i> All Employees</a></li>
+        <li><a href="{% url 'employees:add' %}"><i class="fa fa-user-plus"></i> Add Employee</a></li>
       </ul>
     </div>
   </div>
