make headers more dynamic

--- a/employees/templates/employees/all_employees.html
+++ b/employees/templates/employees/all_employees.html
@@ -6,7 +6,7 @@
 
 {% block body %}
     <div class="row">
-        <h2 class="text-center"><i class="fa fa-users"></i> All Employees</h2>
+        <h2 class="text-center"><i class="fa fa-users"></i> {{ title }}</h2>
         <br>
         <br>
         {% for emp in object_list %}
