--- a/employees/templates/employees/update_relation.html
+++ b/employees/templates/employees/update_relation.html
@@ -6,7 +6,7 @@
 
 {% block body %}
     <div class="col-sm-offset-3 col-sm-6">
-        <h2 class="text-center"><i class="fa fa-user"></i> Update Relation</h2>
+        <h2 class="text-center"><i class="fa fa-user"></i> {{ title }}</h2>
         <br>
         {% include 'includes/form.html' %}
     </div>
