--- a/employees/templates/employees/all_relations.html
+++ b/employees/templates/employees/all_relations.html
@@ -6,7 +6,7 @@
 
 {% block body %}
     <div class="row">
-        <h2 class="text-center"><i class="fa fa-users"></i> {{ title }} For {{ name }}</h2>
+        <h2 class="text-center"><i class="fa fa-users"></i> {{ title }} For <a href="{% url 'employees:detail' id %}">{{ name }}</a></h2>
         <br>
         {% for emp in object_list %}
             <div class="col-sm-4">
