convert layout to table

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
         <title>{% block title %}Employee{% endblock %}</title>
     </head>
     <body>
+{#        {% include 'includes/nav_bar.html' %}#}
         <div class="container">
             {% include 'includes/nav_bar.html' %}
             {% include 'includes/messages.html' %}
